--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@angular/common": "~2.3.0",
     "@angular/compiler": "~2.3.0",
     "@angular/core": "~2.3.0",
+    "@angular/forms": "~2.3.0",
     "@angular/platform-browser": "~2.3.0",
     "@angular/platform-browser-dynamic": "~2.3.0",
-    "@angular/forms": "~2.3.0",
     "core-js": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
-    "zone.js": "^0.6.25",
-    "rxjs": "5.0.0-beta.12"
+    "zone.js": "^0.6.25"
   }
 }
