--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/compiler": "~2.3.0",
     "@angular/core": "~2.3.0",
     "@angular/forms": "~2.3.0",
+    "@angular/http": "~2.3.0",
+    "@angular/router": "~3.3.0",
     "@angular/platform-browser": "~2.3.0",
     "@angular/platform-browser-dynamic": "~2.3.0",
     "core-js": "^2.4.1",
